client/src/components/sidebar/sidebar.scss
@import "./app.scss";
.sidebar {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: white;
  color: black;
  display: none;
  
  .whitebg{
    background-color: white;
  }
  
  .bg {
    z-index: 999;
    position: fixed;
    top: 0px;
    right: 0px;
    bottom: 0;
    width: 400px;

    @include mobile {
      width: 200px;
    }

    .links {
      position: absolute;
      width: 100%;
      height: 100%;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      gap: 20px;

      a {
        font-size: 40px;

        @include mobile {
          font-size: 20px;
        }
      }
    }
  }

  #hamburger {
    // transform: translate(-45%, -45%);
    
  }
  .toggle-button {
    z-index: 999;
    position: fixed;
    width: 25px;
    height: 25px;
    border-radius: 10px;
    top: 0px;
    transform: translateY(-20px);
    right: 10px;
    padding: 2px;
    padding-bottom: 0;
    border-radius: 5px;
    background-color: white;
    cursor: pointer;
    display: none;
    @include tablet{
      display: block;
    }
    @include mobile{
      display: block;
      top: 60px;
    }
    @include s-mobile{
      top: 55px;
    }
  }
  @include tablet{
    display: block;
  }
  @include mobile{
    display: block;
  }
}

